securitygroup.tf

resource "aws_security_group" "dbSG" {
  name        = "dbSG"
  description = "dbSG"
  
  vpc_id = "${aws_vpc.MyDemoVPC.id}"

  ingress {
    description      = "mySQLport"
    from_port        = 3306
    to_port          = 3306
    protocol         = "tcp"
    #cidr_blocks      = ["0.0.0.0/0"]
    security_groups = [ aws_security_group.websrvSG.id ]
  }

}

resource "aws_security_group" "websrvSG" {
  name        = "websrvSG"
  description = "websrvSG"
  
  vpc_id = "${aws_vpc.MyDemoVPC.id}"

  
  ingress {
    description      = "SSH"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  ingress {
    description      = "80HTTP"
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]

  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name = "websrvSG"
  }
}
